--- a/src/pages/Videos/videoDetail/videoDetail.css
+++ b/src/pages/Videos/videoDetail/videoDetail.css
@@ -137,8 +137,8 @@
 
 /* CARD DE PRODUTO */
 .video-detail__product-card {
-  min-width: 140px;
-  max-width: 160px;
+  min-width: 160px;
+  max-width: 180px;
   background-color: #ffffff;
   border-radius: 8px;
   padding: 12px 8px;
@@ -147,6 +147,7 @@
   flex-direction: column;
   align-items: center;
 }
+
 
 .video-detail__product-image-wrapper {
   width: 100%;
@@ -174,6 +175,12 @@
   margin: 2px 0;
   font-size: 12px;
   color: #4a5568;
+
+  /* 🍝 aqui que a mágica acontece */
+  display: -webkit-box;
+  -webkit-line-clamp: 4;   /* quantidade de linhas */
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
 
 .video-detail__product-price {
