--- a/src/components/header/component/searchInfo/searchInfo.css
+++ b/src/components/header/component/searchInfo/searchInfo.css
@@ -54,6 +54,20 @@
   opacity: .85;
 }
 
+.link-sobre {
+  color: inherit;
+  text-decoration: none;
+}
+
+.link-sobre:hover {
+  color: inherit;
+  text-decoration: none;
+}
+
+.link-sobre:visited {
+  color: inherit;
+}
+
 .link-div {
   font-size: 24px;
   display: flex;
